platform/jupyter-lab.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab
  namespace: apps
  labels:
    app.kubernetes.io/name: jupyter-lab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8888
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jupyter-lab
  namespace: apps
  labels:
    app.kubernetes.io/name: jupyter-lab
    kubernetes.io/service-name: jupyter-lab
addressType: IPv4
ports:
  - name: http
    port: 8888
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.178.38
    conditions:
      ready: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-lab
  namespace: apps
  labels:
    app.kubernetes.io/name: jupyter-lab
spec:
  rules:
    - host: jupyter.darwin-labs.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter-lab
                port:
                  name: http
